# discordissues

./: .gitignore  Cargo.toml  example_config.toml  readme.md  sqlx-data.json
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  Login.tsx
migrations/: 20220305151000_create_mapping_table.sql
src/: config.rs  discord.rs  github.rs  main.rs  state.rs  webserver.rs
