[package]
name = "reactionissue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.31"
anyhow = "1.0.55"
twilight-cache-inmemory = "0.10.1"
twilight-gateway = "0.10.1"
twilight-http = "0.10.1"
twilight-model = "0.10.1"
futures = "0.3.21"
toml = "0.5.8"
serde_json = "1.0.79"
actix-files = "0.6.0"
jsonwebtoken = "7.2.0" # not latest version cause octocrab uses this

[dependencies.actix-web]
version = "4.0.1"

[dependencies.clap]
version = "3.1.5"
features = ["derive"]

[dependencies.tokio]
version = "1.17.0"
features = ["tracing", "full"]

[dependencies.tracing-subscriber]
version = "0.3.9"
features = ["tracing-log"]

[dependencies.serde]
version = "1.0.136"
features = ["derive"]

[dependencies.sqlx]
version = "0.5.11"
features = ["sqlite", "macros", "runtime-tokio-rustls", "offline"]

[dependencies.octocrab]
version = "0.15.4"
features = ["rustls"]
default-features = false
